@@ -1,5 +1,5 @@
 /*
- * "$Id: lpadmin.c,v 1.22.2.8 2002/05/16 14:00:18 mike Exp $"
+ * "$Id: lpadmin.c,v 1.22.2.9 2002/06/27 19:04:33 mike Exp $"
  *
  *   "lpadmin" command for the Common UNIX Printing System (CUPS).
  *
@@ -36,7 +36,7 @@
  *   set_printer_model()         - Set the driver model file.
  *   set_printer_options()       - Set the printer options.
  *   validate_name()             - Make sure the printer name only contains
- *                                 letters, numbers, and the underscore...
+ *                                 valid chars...
  */
 
 /*
@@ -138,7 +138,7 @@ main(int  argc,			/* I - Number of command-line arguments */
 
             if (!validate_name(pclass))
 	    {
-	      fputs("lpadmin: Class name can only contain letters, numbers, and the underscore!\n", stderr);
+	      fputs("lpadmin: Class name can only contain printable characters!\n", stderr);
 	      return (1);
 	    }
 
@@ -174,7 +174,7 @@ main(int  argc,			/* I - Number of command-line arguments */
 
             if (!validate_name(printer))
 	    {
-	      fputs("lpadmin: Printer name can only contain letters, numbers, and the underscore!\n", stderr);
+	      fputs("lpadmin: Printer name can only contain printable characters!\n", stderr);
 	      return (1);
 	    }
 
@@ -355,7 +355,7 @@ main(int  argc,			/* I - Number of command-line arguments */
 
             if (!validate_name(printer))
 	    {
-	      fputs("lpadmin: Printer name can only contain letters, numbers, and the underscore!\n", stderr);
+	      fputs("lpadmin: Printer name can only contain printable characters!\n", stderr);
 	      return (1);
 	    }
 
@@ -412,7 +412,7 @@ main(int  argc,			/* I - Number of command-line arguments */
 
             if (!validate_name(pclass))
 	    {
-	      fputs("lpadmin: Class name can only contain letters, numbers, and the underscore!\n", stderr);
+	      fputs("lpadmin: Class name can only contain printable characters!\n", stderr);
 	      return (1);
 	    }
 
@@ -513,7 +513,7 @@ main(int  argc,			/* I - Number of command-line arguments */
 
             if (!validate_name(printer))
 	    {
-	      fputs("lpadmin: Printer name can only contain letters, numbers, and the underscore!\n", stderr);
+	      fputs("lpadmin: Printer name can only contain printable characters!\n", stderr);
 	      return (1);
 	    }
 
@@ -1806,20 +1806,12 @@ set_printer_options(http_t        *http,	/* I - Server connection */
 
 
 /*
- * 'validate_name()' - Make sure the printer name only contains letters,
- *                     numbers, and the underscore...
+ * 'validate_name()' - Make sure the printer name only contains valid chars.
  */
 
 static int			/* O - 0 if name is no good, 1 if name is good */
 validate_name(const char *name)	/* I - Name to check */
 {
- /*
-  * Don't allow names to start with a digit...
-  */
-
-  if (isdigit(*name))
-    return (0);
-
  /*
   * Scan the whole name...
   */
@@ -1827,7 +1819,7 @@ validate_name(const char *name)	/* I - Name to check */
   while (*name)
     if (*name == '@')
       return (1);
-    else if (!isalnum(*name) && *name != '_')
+    else if (*name <= ' ' || *name == 127)
       return (0);
     else
       name ++;
@@ -1837,5 +1829,5 @@ validate_name(const char *name)	/* I - Name to check */
 
 
 /*
- * End of "$Id: lpadmin.c,v 1.22.2.8 2002/05/16 14:00:18 mike Exp $".
+ * End of "$Id: lpadmin.c,v 1.22.2.9 2002/06/27 19:04:33 mike Exp $".
  */
